# pyo3-bitfield

./: Cargo.toml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: test.yaml
pyo3-bitfield-impl/: Cargo.toml
pyo3-bitfield-impl/src/: analyze.rs  codegen.rs  intermediate.rs  lib.rs  parse.rs
pyo3-bitfield-impl/tests/: expand.rs  ui.rs
pyo3-bitfield-impl/tests/compile/fail/: enum.rs  enum.stderr
pyo3-bitfield-impl/tests/expand/: basic.expanded.rs  basic.rs  bilge.expanded.rs  bilge.rs  empty.expanded.rs  empty.rs  modular-bitfield.expanded.rs  modular-bitfield.rs
src/: lib.rs
tests/: tests.rs
tests/expand/: basic.expanded.rs  basic.rs  bitfield.expanded.rs  bitfield.rs  empty.expanded.rs  empty.rs
