[package]
name = "pyo3-bitfield-impl"
authors = ["John P. Lettman"]
version.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
regex = "1.10.5"

[dev-dependencies]
bilge = "0.2.0"
macrotest = "1.0"
trybuild = "1.0"